lots of changes

--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@ $(document).ready(function(){
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       <li><a href="#landing-home" id="nav-about">Home</a></li>
-      	<li><a href="#event" id="nav-about">Event</a></li>
+      	<li><a href="#event" id="nav-event">Event</a></li>
         <li><a href="#about" id="nav-about">About</a></li>
         <li><a href="#projects" id="nav-projects">Projects</a></li>
+        <li><a href="#featured" id="hav-featured">Featured</a></li>
         <li><a href="#agenda" id="hav-agenda">Agenda</a></li>
         <li><a href="#speakers" id="nav-speakers">Speakers</a></li>
       </ul>
@@ -172,7 +173,7 @@ $(document).ready(function(){
 	
 		<h1 class="title">step in 2016</span></h1>
 
-		<p class="content">"Step In" is the second annual open house at the Innovation Center Silicon Valley. Come learn about how the ICSV uses Machine Learning to push boundaries with customers every day.<br><br>
+		<p class="content3">"Step In" is the second annual open house at the Innovation Center Silicon Valley. Come learn about how the ICSV uses Machine Learning to push boundaries with customers every day.<br><br>
 		Explore disruptive technologies and trends in the Silicon Valley, engage in an interactive design thinking workshop about Pok&#233;mon GO, and learn how we scale Machine Learning through customer engagements.<br><br>
 		There will be a HanaHaus pop-up caf&#233; with delicious Blue Bottle Coffee, as well as a variety of prizes, giveaways, and snacks. Hope to see you there!</p>
 </div>
@@ -185,7 +186,11 @@ $(document).ready(function(){
 		<h1 class="title">we are <span class="keyword-about">people</span></h1>
 		<!-- <img src="assets/peter.jpg" class="img-responsive photo-about"> -->
 	<div class="col-md-5">
-	<iframe id="kmsembed-0_dj2h7e6d" src="https://video.sap.com/embed/secure/iframe/entryId/0_dj2h7e6d/uiConfId/30317401" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0" class="opening-video"></iframe>
+	<iframe id="kmsembed-0_dj2h7e6d" src="https://www.youtube.com/embed/z-uRpUrVZjM" frameborder="0" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0" class="opening-video"></iframe>
+
+
+<!-- 
+	<iframe id="kmsembed-0_dj2h7e6d" src="https://video.sap.com/embed/secure/iframe/entryId/0_dj2h7e6d/uiConfId/30317401" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0" class="opening-video"></iframe> -->
 </div>
 <div class="col-md-7">
 <p class="content1">We explore unconventional viable ideas, engage strategic customers, drive customer-led innovation, and scale innovation by embracing the entrepreneurial spirit within and beyond the SAP ecosystem right from the heart of the Silicon Valley.</p>
@@ -197,9 +202,9 @@ $(document).ready(function(){
 	<div class="col-md-6">
 
 		<p class="content content2">
-		We embrace diversity and individuality - in background, talent, and identity.<br><br>
+		We embrace diversity and individuality &mdash; in background, talent, and identity.<br><br>
 		Our team members hail from all over the world, including countries such as India, Japan, and Hungary. We're data scientists, Machine Learning experts, UX designers, and much more.<br><br>
-		Together, we as people make the ICSV, ICSV.</p>
+		The core of the Innovation Center is its people, and together we make the ICSV, ICSV.</p>
 	</div>
 
 	<div class="col-md-6">
@@ -272,6 +277,25 @@ $(document).ready(function(){
 
 <div class="page-width">
 
+<!-- <div id="featured" class="section">
+<div class="row">
+	
+		<h1 class="title"><span class="keyword-featured">featured</span> speakers</span></h1>
+
+		<div class="col-sm-12 col-xs-12">
+		<div class="col-md-2"></div>
+		<div class="col-sm-6 col-xs-6 col-md-4">
+			<img src="assets/placeholder-person.svg" class="speaker-img img-responsive">
+		</div>
+
+		<div class="col-sm-6 col-xs-6 col-md-6">
+			<h3 class="featured-name">Name</h3>
+			<h4 class="featured-company">company | position</h4>
+			<p class="featured-content">biography</p>
+		</div>
+			</div>
+</div>
+</div> -->
 
 
 <!-- <img src="assets/pink.svg" class="pink-triangle"> -->
