update people title

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ $(document).ready(function(){
 <div class="row about-1">
 
 	
-		<h1 class="title">we are <span class="keyword-about">people</span></h1>
+		<h1 class="title">our <span class="keyword-about">people</span></h1>
 		<!-- <img src="assets/peter.jpg" class="img-responsive photo-about"> -->
 	<div class="col-md-5">
 	<iframe id="kmsembed-0_dj2h7e6d" src="https://www.youtube.com/embed/z-uRpUrVZjM" frameborder="0" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0" class="opening-video"></iframe>
