--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ $(document).ready(function(){
 
 		<p class="content content2">
 		We embrace diversity and individuality &mdash; in background, talent, and identity.<br><br>
-		Our team members hail from all over the world, including countries such as India, Germany, Japan, and Hungary. We're data scientists, Machine Learning experts, UX designers, and much more.<br><br>
+		Our team members hail from all over the world, including countries such as India, Germany, Japan, and Hungary. We're data scientists, Machine Learning experts, business developers, UX designers, and much more.<br><br>
 		The core of the Innovation Center is its people, and together we make the ICSV, ICSV.</p>
 	</div>
 
