update spelling errors
probably one of many

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ $(document).ready(function(){
 			</div>
 			<div class="col-sm-4 col-xs-12 project-modules">
 				<h3 class="project-title">Urban Development</h3>
-				<p class="project-content">Every urban development team want to have better engagement with its citizens, to provide best real time services to them and want to have a connected community by bringing the citizens and urgan autohrities together. The data for enabling such platform emerges from government offices, factories, schools, traffic, and residences to name a few.</p>
+				<p class="project-content">Every urban development team want to have better engagement with its citizens, to provide best real time services to them and want to have a connected community by bringing the citizens and urban authorities together. The data for enabling such platform emerges from government offices, factories, schools, traffic, and residences to name a few.</p>
 			</div>
 		</div>
 	</div>
