--- a/index.html
+++ b/index.html
@@ -263,10 +263,27 @@ $(document).ready(function(){
 				<p class="project-content">Machine learning is a critical component of Big Data. With machine learning, we can empower our customers to preduct the future in real time so that they act faster and gain competitive advantage.</p>
 			</div>
 			<div class="col-sm-4 col-xs-12 project-modules">
+				<h3 class="project-title">Automotive</h3>
+				<p class="project-content">SAP empowers automative companies to accelerate product innovation, improve quality, reduce manufacturing costs, and sell as well as service vehicles more profitably. This helps drive market share growth in a highly competitive global market.</p>
+			</div>
+		</div>
+<br><br><br>
+		<div class="row">
+			<div class="col-sm-4 col-xs-12 project-modules">
 				<h3 class="project-title">Urban Development</h3>
 				<p class="project-content">Every urban development team want to have better engagement with its citizens, to provide best real time services to them and want to have a connected community by bringing the citizens and urban authorities together. The data for enabling such platform emerges from government offices, factories, schools, traffic, and residences to name a few.</p>
 			</div>
+			<div class="col-sm-4 col-xs-12 project-modules">
+			<h3 class="project-title">Smart SCM/LO</h3>
+				<p class="project-content">Most of the enterprises today face the challenge of ensuring the flexibility and responsiveness of their supply chain strategies. SAP is a leader when it comes to supply chain solutions as it delivers simple logistics to run simple in today's digital economy due to the innovation that the SAP HANA platform.</p>
+			</div>
+			<div class="col-sm-4 col-xs-12 project-modules">
+				<h3 class="project-title">Personalized Medicine</h3>
+				<p class="project-content">Personalized Medicine enables specific-targeted health care for each patient. It is an opportunity to crosscut the data from various ever-increasing sources, such as genome data, clinical information, personal lab test results, images and wearable devices, and provide particular individual care with combined analytics on the SAP HANA platform.</p>
+			</div>
+
 		</div>
+
 	</div>
 </div>
 </div>
@@ -310,84 +327,102 @@ $(document).ready(function(){
 		<!-- description of deep dive and small dive, and booths -->
 		<div class="row">
 			<div class="col-sm-6 col-xs-12 agenda-column">
-			<h3 class="agenda-title">Deep Dive</h3>
+			<h3 class="agenda-title">Deep Dive (Sequoia)</h3>
 			<!-- copy and paste for other sessions -->
 				<div class="agenda-content">
 					<h4 class="agenda-time">10:00 AM- 11:25 AM </h4>
-					<h4 class="agenda-event">ML101: Is Machine Learning Controlling Your Life?</h4>
-					<h5 class="agenda-location">Karsten Schmidt, Frank B</h5>
+					<h4 class="agenda-event">Design Thinking Workshop: Pok&#233;mon GO for the Enterprise</h4>
+					<h5 class="agenda-location">Wafaa Sabil & Team</h5>
+				</div>
+				<div class="agenda-content">
+					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
+					<h4 class="agenda-event">Doing the Boring Stuff Can Actually Bring Money - Learn how SAP's Machine Learning Platform and Application Help Create the Intelligent Enterprise</h4>
+					<h5 class="agenda-location">Peter Weigt</h5>
 				</div>
 				<!-- this doesn't display until certain resolutions -->
 				<div class="agenda-content dive-for-scale">
-					<h4 class="agenda-time">1:05 PM - 2:40 PM </h4>
-					<h4 class="agenda-event">Design Thinking Workshop: Pok&#233;mon GO for the Enterprise</h4>
-					<h5 class="agenda-location">Designers</h5>
+					<h4 class="agenda-time">1:30 PM - 2:25 PM</h4>
+					<h4 class="agenda-event">How to Build Slack Bots: Learn from the Creators</h4>
+					<h5 class="agenda-location">Slack</h5>
 				</div>
-
+				<!-- this doesn't display until certain resolutions -->
+				<div class="agenda-content dive-for-scale">
+					<h4 class="agenda-time">2:30 PM - 2:55 PM</h4>
+					<h4 class="agenda-event">HanaHaus Chatbot: Making Workspace Reservations with Simple Text Messages</h4>
+					<h5 class="agenda-location">Karthik Uppuluri</h5>
+				</div>
 
 			</div>
 
 			<!-- <div class="col-md-2"></div> -->
 			<div class="col-sm-6 col-xs-12 agenda-column">
-				<h3 class="agenda-title">Small Dive</h3>
+				<h3 class="agenda-title">Small Dive (Library)</h3>
 				<div class="agenda-content">
 					<h4 class="agenda-time">10:00 AM - 11:00 AM </h4>
-					<h4 class="agenda-event">Driving Customer Engagements with Machine Learning</h4>
-					<h5 class="agenda-location">description</h5>
+					<h4 class="agenda-event">ML101: Is Machine Learning Controlling Your Life</h4>
+					<h5 class="agenda-location">Karsten Schmidt, Frank Blechschmidt</h5>
 				</div>
 				<div class="agenda-content">
-					<h4 class="agenda-time">11:05 AM - 11:30 AM </h4>
+					<h4 class="agenda-time">11:00 AM - 11:25 AM </h4>
 					<h4 class="agenda-event">Connecting Google Deep Mind to SAP Applications</h4>
-					<h5 class="agenda-location">description</h5>
+					<h5 class="agenda-location">Alex Schaefer / Rene Springer</h5>
 				</div>
 				<div class="agenda-content">
-					<h4 class="agenda-time">11:35 AM - 12:00 PM </h4>
-					<h4 class="agenda-event">-----</h4>
-					<h5 class="agenda-location">description</h5>
+					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
+					<h4 class="agenda-event">The User Experience Approach when Designing Machine Learning Applications</h4>
+					<h5 class="agenda-location">Sajid Sayed, Lucia Melgarejo, Shae Maeda</h5>
 				</div>
 			</div>
 
 			<div class="col-sm-12 col-xs-12 lunch-container">
 			<h4 class="lunch-keynote">&mdash;  Lunch &mdash;</h4>
-			<p class="lunch-content">12:00 PM - 12:25 PM</p>
+			<p class="lunch-content">12:00 PM - 12:25 PM<br><span class="keynote">Caf&#233;s 1, 3 & 8</span></p>
 
 			<h4 class="lunch-keynote">&mdash;  Keynote &mdash;</h4>
-			<p class="lunch-content">12:30 PM - 1:30 PM<br><span class="keynote">Slack in the Enterprise & How to Build Slack Bots</span></p>
-
+			<p class="lunch-content">12:30 PM - 1:15 PM<br><span class="keynote">Slack in the Enterprise</span></p>
 			</div>
 
+<!-- DISPLAYS AT CERTAIN RESOLUTION DEEP DIVE -->
 			<div class="row">
 			<div class="col-sm-6 col-xs-12 agenda-column">
 			<!-- displays at only certain resolutions -->
 				<div class="agenda-content  agenda-not-for-scale">
-					<h4 class="agenda-time">1:05 PM - 2:40 PM </h4>
-					<h4 class="agenda-event">Design Thinking Workshop: Pok&#233;mon GO for the Enterprise</h4>
-					<h5 class="agenda-location">Designers</h5>
+					<h4 class="agenda-time">1:30 PM - 2:25 PM </h4>
+					<h4 class="agenda-event">How to Build Slack Bots: Learn from the Creators</h4>
+					<h5 class="agenda-location">Slack</h5>
+				</div>
+				<div class="agenda-content  agenda-not-for-scale">
+					<h4 class="agenda-time">2:30 PM - 2:55 PM </h4>
+					<h4 class="agenda-event">HanaHaus Chatbot: Making Workspace Reservations with Simple Text Messages</h4>
+					<h5 class="agenda-location">Karthik Uppuluri</h5>
 				</div>
 			</div>
+
+
+
+<!-- COMMENCE SMALL DIVE -->
 			<!-- <div class="col-md-2"></div> -->
 			<div class="col-sm-6 col-xs-12 agenda-column">
 				<div class="agenda-content">
-					<h4 class="agenda-time">1:05 PM - 1:30 PM </h4>
-					<h4 class="agenda-event">Chatbots</h4>
-					<h5 class="agenda-location">description</h5>
+					<h4 class="agenda-time">1:30 - 1:55 PM </h4>
+					<h4 class="agenda-event">Disruptive Technologies and Current Trends in Silicon Valley </h4>
+					<h5 class="agenda-location">Till Pieper</h5>
 				</div>
 				<div class="agenda-content">
-					<h4 class="agenda-time">1:35 PM - 2:00 PM </h4>
-					<h4 class="agenda-event">Disruptive Tech & Trends</h4>
-					<h5 class="agenda-location">description</h5>
+					<h4 class="agenda-time">2:00 PM - 2:25 PM</h4>
+					<h4 class="agenda-event">Driving Customer Engagements with Machine Learning</h4>
+					<h5 class="agenda-location">Anil Babu Ankisettipalli</h5>
 				</div>
 				<div class="agenda-content">
-					<h4 class="agenda-time">2:05 PM - 2:30 PM </h4>
-					<h4 class="agenda-event">Deep Learning for Enterprise Applications</h4>
-					<h5 class="agenda-location">description</h5>
+					<h4 class="agenda-time">2:30 PM - 2:55 PM</h4>
+					<h4 class="agenda-event">Where Will Deep Learning Take Up with Enterprise Applications?</h4>
+					<h5 class="agenda-location">Judith Li</h5>
 				</div>
-				<div class="agenda-content">
-					<h4 class="agenda-time">2:35 PM - 2:50 PM </h4>
-					<h4 class="agenda-event">Machine Learning & Human End Goals</h4>
-					<h5 class="agenda-location">description</h5>
-				</div>
-				
+			</div>
+
+			<div class="col-sm-12 col-xs-12 lunch-container">
+			<h4 class="lunch-keynote">&mdash;  Closing / Raffle &mdash;</h4>
+			<p class="lunch-content">2:55 PM - 3:00 PM</p>
 			</div>
 
 		</div>
