comment out some stuff

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ $(document).ready(function(){
       	<li><a href="#event" id="nav-event">Event</a></li>
         <li><a href="#about" id="nav-about">About</a></li>
         <li><a href="#projects" id="nav-projects">Projects</a></li>
-        <li><a href="#featured" id="hav-featured">Featured</a></li>
+        <!-- <li><a href="#featured" id="hav-featured">Featured</a></li> -->
         <li><a href="#agenda" id="hav-agenda">Agenda</a></li>
         <li><a href="#speakers" id="nav-speakers">Speakers</a></li>
       </ul>
@@ -256,11 +256,11 @@ $(document).ready(function(){
 		<div class="row">
 			<div class="col-sm-4 col-xs-12 project-modules">
 			<h3 class="project-title">Big Data</h3>
-				<p class="project-content">Big Data is an opportunity to change how you work, play, and live by tracking new signals within the digital hoise. From major league sports and personalized shopping, to cancer treatments trailored to your DNA, SAP customers are achieving what was once impossible.</p>
+				<p class="project-content">Big Data is an opportunity to change how you work, play, and live by tracking new signals within the digital noise. From major league sports and personalized shopping, to cancer treatments trailored to your DNA, SAP customers are achieving what was once impossible.</p>
 			</div>
 			<div class="col-sm-4 col-xs-12 project-modules">
 				<h3 class="project-title">Machine Learning</h3>
-				<p class="project-content">Machine learning is a critical component of Big Data. With machine learning, we can empower our customers to preduct the future in real time so that they act faster and gain competitive advantage.</p>
+				<p class="project-content">Machine learning is a critical component of Big Data. With machine learning, we can empower our customers to predict the future in real time so that they act faster and gain competitive advantage.</p>
 			</div>
 			<div class="col-sm-4 col-xs-12 project-modules">
 				<h3 class="project-title">Automotive</h3>
