push lots of commits

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ $(document).ready(function(){
       	<li><a href="#event" id="nav-event">Event</a></li>
         <li><a href="#about" id="nav-about">About</a></li>
         <li><a href="#projects" id="nav-projects">Projects</a></li>
-        <!-- <li><a href="#featured" id="hav-featured">Featured</a></li> -->
+        <li><a href="#featured" id="hav-featured">Featured</a></li>
         <li><a href="#agenda" id="hav-agenda">Agenda</a></li>
         <li><a href="#speakers" id="nav-speakers">Speakers</a></li>
       </ul>
@@ -253,7 +253,7 @@ $(document).ready(function(){
 		<h1 class="title"><span class="keyword-projects">industries</span> we've worked in</h1> <!-- find a better title -->
 		<!-- hold off on this section cause too much HANA!!! -->
 		<!-- make icons and assets for each facet -->
-		<div class="row">
+		<div class="row project-row">
 			<div class="col-sm-4 col-xs-12 project-modules">
 			<h3 class="project-title">Big Data</h3>
 				<p class="project-content">Big Data is an opportunity to change how you work, play, and live by tracking new signals within the digital noise. From major league sports and personalized shopping, to cancer treatments trailored to your DNA, SAP customers are achieving what was once impossible.</p>
@@ -267,7 +267,6 @@ $(document).ready(function(){
 				<p class="project-content">SAP empowers automative companies to accelerate product innovation, improve quality, reduce manufacturing costs, and sell as well as service vehicles more profitably. This helps drive market share growth in a highly competitive global market.</p>
 			</div>
 		</div>
-<br><br><br>
 		<div class="row">
 			<div class="col-sm-4 col-xs-12 project-modules">
 				<h3 class="project-title">Urban Development</h3>
@@ -294,25 +293,25 @@ $(document).ready(function(){
 
 <div class="page-width">
 
-<!-- <div id="featured" class="section">
+<div id="featured" class="section">
 <div class="row">
 	
 		<h1 class="title"><span class="keyword-featured">featured</span> speakers</span></h1>
 
 		<div class="col-sm-12 col-xs-12">
 		<div class="col-md-2"></div>
-		<div class="col-sm-6 col-xs-6 col-md-4">
-			<img src="assets/placeholder-person.svg" class="speaker-img img-responsive">
+		<div class="col-sm-6 col-md-4">
+			<img src="assets/don.jpg" class="speaker-img img-responsive featured-img">
 		</div>
 
-		<div class="col-sm-6 col-xs-6 col-md-6">
-			<h3 class="featured-name">Name</h3>
-			<h4 class="featured-company">company | position</h4>
-			<p class="featured-content">biography</p>
+		<div class="col-sm-6 col-md-6">
+			<h3 class="featured-name">Don Goodman-Wilson</h3>
+			<img src="assets/slack_logo.png" class="featured-company">
+			<p class="featured-content">Don Goodman-Wilson is a Senior Developer Advocate on the Developer Relations team at Slack. He loves living in the interfaces between layers, whether it's bridging languages, systems, or developers. Prior to hacking on Slack's Platform, Don has worked with streaming media, embedded hardware, the model railroading industry, and academic philosophy. He enjoys statically typed languages and sailing, and lives with his wife and daughter in California.</p>
 		</div>
 			</div>
 </div>
-</div> -->
+</div>
 
 
 <!-- <img src="assets/pink.svg" class="pink-triangle"> -->
@@ -408,7 +407,7 @@ $(document).ready(function(){
 				<div class="agenda-content  agenda-not-for-scale">
 					<h4 class="agenda-time">2:30 PM - 2:55 PM </h4>
 					<h4 class="agenda-event">HanaHaus Chatbot: Making Workspace Reservations with Simple Text Messages</h4>
-					<h5 class="agenda-location  agenda-location2">small dive</h5>
+					<h5 class="agenda-location agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Karthik Uppuluri</h5>
 				</div>
 			</div>
@@ -421,19 +420,19 @@ $(document).ready(function(){
 				<div class="agenda-content">
 					<h4 class="agenda-time">1:30 - 1:55 PM </h4>
 					<h4 class="agenda-event">Disruptive Technologies and Current Trends in Silicon Valley </h4>
-					<h5 class="agenda-location  agenda-location2">small dive</h5>
+					<h5 class="agenda-location agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Till Pieper</h5>
 				</div>
 				<div class="agenda-content">
 					<h4 class="agenda-time">2:00 PM - 2:25 PM</h4>
 					<h4 class="agenda-event">Driving Customer Engagements with Machine Learning</h4>
-					<h5 class="agenda-location  agenda-location2">small dive</h5>
+					<h5 class="agenda-location agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Anil Babu Ankisettipalli</h5>
 				</div>
 				<div class="agenda-content">
 					<h4 class="agenda-time">2:30 PM - 2:55 PM</h4>
 					<h4 class="agenda-event">Where Will Deep Learning Take Up with Enterprise Applications?</h4>
-					<h5 class="agenda-location  agenda-location2">small dive</h5>
+					<h5 class="agenda-location agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Judith Li</h5>
 				</div>
 			</div>
@@ -459,7 +458,7 @@ $(document).ready(function(){
 		<!-- one speaker -->
 		<div class="col-md-4 col-sm-4 col-xs-6">
 				<div class="speaker-container">
-						<img src="assets/placeholder-person.svg" class="speaker-img img-responsive">
+						<img src="assets/shae.jpg" class="speaker-img img-responsive">
 						<h4 class="speaker-name">Shae Maeda</h4>
 						<h5 class="speaker-title"><span class="speaker-position">UX Designer</span><br><span class="speaker-session"></span></h5>
 			</div>
@@ -467,17 +466,17 @@ $(document).ready(function(){
 		<!-- one speaker -->
 		<div class="col-md-4 col-sm-4 col-xs-6">
 				<div class="speaker-container">
-						<img src="assets/placeholder-person.svg" class="speaker-img img-responsive">
-						<h4 class="speaker-name">Shae Maeda</h4>
-						<h5 class="speaker-title"><span class="speaker-position">UX Designer</span><br><span class="speaker-session"></span></h5>
+						<img src="assets/peter_head.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Peter Weigt</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Head of ICSV</span><br><span class="speaker-session"></span></h5>
 			</div>
 		</div>
 		<!-- one speaker -->
 		<div class="col-md-4 col-sm-4 col-xs-6">
 				<div class="speaker-container">
-						<img src="assets/placeholder-person.svg" class="speaker-img img-responsive">
-						<h4 class="speaker-name">Shae Maeda</h4>
-						<h5 class="speaker-title"><span class="speaker-position">UX Designer</span> <br><span class="speaker-session"></span></h5>
+						<img src="assets/till_head.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Till Pieper</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Lead of Explore Team</span> <br><span class="speaker-session"></span></h5>
 			</div>
 		</div>
 </div>
