--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ $(document).ready(function(){
 <!-- landing page -->
 <div id="landing-home">
 <div class="container-fluid landing">
-	
+	<img src="assets/icn_sap.png" class="icn_logo">
 <!-- <div class="row">
 	<div class="col-md-6"></div>
 	<div class="col-md-2">
@@ -141,6 +141,7 @@ $(document).ready(function(){
 	<div class="col-md-2"></div>
 	<div class="landing-text col-md-10">
 	<!-- or should this be date  /  location? -->
+
 		<h3 class="date">floor 1 @ bldg 7 &nbsp; / &nbsp; Palo Alto</h3>
 		<h1 class="push-boundaries">Pushing boundaries<br><span class="type-text"></span></h1>
 		<br>
