update with logo

--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@ $(document).ready(function(){
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<!-- <img src="assets/icn_sap.png" class="icn_logo"> -->
 
 <!-- landing page -->
 <div id="landing-home">
 <div class="container-fluid landing">
-	<img src="assets/icn_sap.png" class="icn_logo">
+	<img src="assets/icsn_sap_combo.png" class="icn_logo">
 <!-- <div class="row">
 	<div class="col-md-6"></div>
 	<div class="col-md-2">
